--- a/app/web/templates/base.html
+++ b/app/web/templates/base.html
@@ -17,7 +17,7 @@
 {% block navbar %}
     <div class="nav-self">
         <div style="padding-top: inherit" class="container">
-            <form class="form-inline" action="{{ url_for('web.search') }}" method="get">
+            <form class="form-inline" action="{{ url_for('web.book:search') }}" method="get">
                 <div class="flex-vertical-center-height">
                     <div class="col-md-2">
                         <img src="{{url_for('static', filename='images/logo-yushu.png')}}"/>
@@ -37,28 +37,28 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-2 col-md-offset-1">
-                    <a id="recent" href="{{ url_for('web.index') }}"
+                    <a id="recent" href=""
                        class="flex-vertical-hor-center">
                         <img src="{{ url_for('static', filename='images/upload.png') }}"/>
                         <span>最近上传</span>
                     </a>
                 </div>
                 <div class="col-md-2">
-                    <a id="gifts" href="{{ url_for('web.my_gifts') }}"
+                    <a id="gifts" href=""
                        class="flex-vertical-hor-center">
                         <img src="{{ url_for('static', filename='images/gift.png') }}"/>
                         <span>赠送清单</span>
                     </a>
                 </div>
                 <div class="col-md-2">
-                    <a id="wishes" href="{{ url_for('web.my_wish') }}"
+                    <a id="wishes" href=""
                        class="flex-vertical-hor-center">
                         <img src="{{ url_for('static', filename='images/wish.png') }}"/>
                         <span>心愿清单</span>
                     </a>
                 </div>
                 <div class="col-md-2">
-                    <a id="pending" href="{{ url_for('web.pending') }}"
+                    <a id="pending" href=""
                        class="flex-vertical-hor-center">
                         <img src="{{ url_for('static', filename='images/fish.png') }}"/>
                         <span>鱼漂</span>
@@ -67,17 +67,9 @@
             </div>
         </div>
     </div>
-    <div class="container-height flex-vertical-center float-menu">
-        {% if not current_user.is_authenticated %}
-            <div style="float:right">
-                <a href="{{ url_for('web.login') }}">登录</a>
-                <a style="margin-left: 40px;" href="{{ url_for('web.register') }}">注册</a>
-            </div>
-        {% else %}
-            <a href="{{ url_for('web.personal_center') }}">{{ current_user.nickname }}的鱼书</a>
-            <a style="margin-left: 40px;" href="{{ url_for('web.logout') }}">注销</a>
-        {% endif %}
-    </div>
+
+
+
 {% endblock %}
 <div class='container'>
     <div class="row">
