--- a/app/web/templates/my_gifts.html
+++ b/app/web/templates/my_gifts.html
@@ -12,7 +12,7 @@
     </div>
     {% for gift in gifts %}
         <div class="row">
-            <a href="{{ url_for('web.book_detail', isbn=gift.book.isbn) }}" class="">
+            <a href="{{ url_for('web.book:detail', isbn=gift.book.isbn) }}" class="">
                 <div style="margin-bottom:30px;" class="col-md-9 col-padding">
                     <div class="col-md-2">
                         <img class="book-img-small shadow" src="{{ gift.book.image }}">
@@ -28,14 +28,14 @@
                             <span id="isbn">{{ gift.book.isbn }}</span>
                         </div>
                         <a class="link-normal"
-                           href="{{ url_for('web.redraw_from_gifts', gid=gift.id) }}">
+                           href="{{ url_for('web.gift:redraw', gid=gift.id) }}">
                             撤销
                         </a>
                     </div>
                     <div class="col-md-3 flex-vertical">
-                        {% if gift.wishes_count %}
-                            <a href="{{ url_for('web.book_detail', isbn=gift.book.isbn) }}">
-                                <span class="bg-info">{{ gift.wishes_count }}人想要</span>
+                        {% if gift.count %}
+                            <a href="{{ url_for('web.book:detail', isbn=gift.book.isbn) }}">
+                                <span class="bg-info">{{ gift.count }}人想要</span>
 
                             </a>
                         {% endif %}
