--- a/app/web/templates/auth/forget_password_request.html
+++ b/app/web/templates/auth/forget_password_request.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2 flex-vertical personal-detail">
-                        <form action="{{ url_for('web.forget_password_request') }}"
+                        <form action="{{ url_for('web.auth:forget_password') }}"
                               method="post">
                             <input style="width:100%" id="email" name="email" type="text"
                                    placeholder="你的邮箱账号"
