feat:add drift and redraw opreation

--- a/app/web/templates/book_detail.html
+++ b/app/web/templates/book_detail.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="col-md-2">
                     <a class="btn-normal"
-                       href="{{ url_for('web.draft:send_drift', gid=gift.id) }}">向他请求此书</a>
+                       href="{{ url_for('web.drift:send_drift', gid=gift.id) }}">向他请求此书</a>
                 </div>
             </div>
         {% endfor %}
@@ -122,7 +122,7 @@
                 </div>
                 <div class="col-md-2">
                     <a class="btn-normal"
-                       href="{{ url_for('web.wish:satisfy_wish', wid=wish.id, isbn=[book.isbn]) }}">向他赠送此书</a>
+                       href="{{ url_for('web.wish:satisfy_wish', wid=wish.id) }}">向他赠送此书</a>
                 </div>
             </div>
         {% endfor %}
