--- a/app/web/templates/base.html
+++ b/app/web/templates/base.html
@@ -58,7 +58,7 @@
                     </a>
                 </div>
                 <div class="col-md-2">
-                    <a id="pending" href=""
+                    <a id="pending" href="{{ url_for('web.drift:pending') }}"
                        class="flex-vertical-hor-center">
                         <img src="{{ url_for('static', filename='images/fish.png') }}"/>
                         <span>鱼漂</span>
