--- a/app/web/templates/404.html
+++ b/app/web/templates/404.html
@@ -1,1 +1,23 @@
-<h1>别瞎访问，没这个页面</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>404</title>
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/reset.css') }}/">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/animate.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+</head>
+<body class="bg404 errorpage">
+<section>
+	<div class="wp">
+		<div class="cont">
+			<img src="{{ url_for('static', filename='images/pic404.png') }}"/>
+			<br/><br/><br/><br/>
+			<p>wow~这个页面被外星人抢走了~</p>
+			<br/>
+			<span>Wow~ this page was the alien took ~</span>
+		</div>
+	</div>
+</section>
+</body>
+</html>
