--- a/app/web/templates/500.html
+++ b/app/web/templates/500.html
@@ -1,1 +1,24 @@
-<h1>出错啦，有人要扣工资了</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>500</title>
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/reset.css') }}/">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/animate.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+</head>
+<body class="bg503 errorpage">
+<section>
+	<div class="wp">
+		<div class="cont">
+			<div class="fl error_cut"><img src="{{ url_for('static', filename='images/pic503.png') }}"/></div>
+			<div class="fr error_cut">
+				<img src="{{ url_for('static', filename='images/word503.png') }}"/>
+				<br/><br/><br/><br/><br/><br/>
+				<p>服务器错误，请稍后重新刷新。</p>
+			</div>
+		</div>
+	</div>
+</section>
+</body>
+</html>
